fix for resume overflow on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -357,6 +357,9 @@ a {
     footer {
         font-size: 0.7rem;
     }
+    canvas{
+        width: 100%;
+    }
 }
 
 /* ========================================
